# parsym

./: README.md  babel.config.js  generate-react-cli.json  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  setupTests.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/App/: App.module.css  App.test.tsx  App.tsx
src/components/ColorSchemeToggle/: ColorSchemeToggle.test.tsx  ColorSchemeToggle.tsx
src/components/DetailsRoutes/: DetailsRoutes.module.css  DetailsRoutes.test.tsx  DetailsRoutes.tsx
src/components/ErrorPage/: ErrorPage.test.tsx  ErrorPage.tsx
src/components/Footer/: Footer.module.css  Footer.test.tsx  Footer.tsx
src/components/Header/: Header.module.css  Header.test.tsx  Header.tsx
src/components/InstanceDetails/: InstanceDetails.module.css  InstanceDetails.test.tsx  InstanceDetails.tsx
src/components/RouterSwitcher/: RouterSwitcher.module.css  RouterSwitcher.test.tsx  RouterSwitcher.tsx
src/components/ScopeDetails/: ScopeDetails.module.css  ScopeDetails.test.tsx  ScopeDetails.tsx
src/components/ScopeLink/: ScopeLink.module.css  (+2 more)
src/symbol-table/: Function.ts  Instance.ts  InstanceEntrails.ts  MetaSymbolKind.ts  Mutability.ts  ProductionAttribute.ts  ReferenceType.ts  Scope.ts  ScopedNameId.ts  Symbol.ts  SymbolAttribute.ts  SymbolKind.ts  SymbolTable.ts  Type.ts  TypeEntrails.ts  UserDefinedTypeName.ts
src/symbol_table/: README.md  SymbolKind.ts
src/test-utils/: render.tsx
templates/default/: TemplateName.test.tsx  TemplateName.tsx
(+27 files in other folders)
